added urlshortening, and clickcount functionality

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,8 +7,8 @@
     <p class="h3 w-50 grey typewriter">Our tool allows you to seamlessly keep a track of your simple and
         easy-to-remember shortned powerful links. </p>
     <div class="mt-4">
-        <a class="tryNow">Try Now</a>
-        <button class="btn btn-lg loginbtn">Login</button>
+        <a class="tryNow" routerLink="/URLShortener">Try Now</a>
+        <button class="btn btn-lg loginbtn" routerLink="/login">Login</button>
         <button class="btn btn-lg signupbtn " routerLink="/signup">SignUp</button>
     </div>
     <img class="background" src="./assets/img/graph.png" alt="">
