--- a/src/app/topnav/topnav.component.html
+++ b/src/app/topnav/topnav.component.html
@@ -4,11 +4,11 @@
         <div class="d-flex justify-content-between">
 
             <div class="site-logo">
-                <img class="logo" src="./assets/img/logo.png" alt="logo">
+                <img class="logo" src="./assets/img/logo.png" alt="logo" routerLink="">
             </div>
             <div>
-                <button class="btn loginbtn m-2">Login</button>
-                <button class="btn signupbtn ">SignUp</button>
+                <button class="btn loginbtn m-2" routerLink="/login">Login</button>
+                <button class="btn signupbtn " routerLink="/signup">SignUp</button>
             </div>
         </div>
     </div>
