--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,12 +1,12 @@
 <div class="container">
     <img class="background" src="./assets/img/signinbackground.png" alt="">
-    <h1>Login</h1>
+    <h1>Signup</h1>
   
     <div class="row ">
         <div class="col-sm-6 w-50">
             <div class="card w-50">
                 <div class="card-body">
-                    <form>
+                    <form action="/register" method="POST">
                         <div class="form-group">
                             <label for="email">Email</label>
                             <input style="font-family:Montserrat" type="email" class="form-control" name="username">
@@ -15,7 +15,15 @@
                             <label for="password">Password</label>
                             <input type="password" class="form-control" name="password">
                         </div>
-                        <button type="submit" class="btn btn-dark mt-3">Login</button>
+                        <div class="form-group mt-2">
+                            <label for="confirm password">Confirm Password</label>
+                            <input type="password" class="form-control" name="confirmpassword">
+                        </div>
+                        <div class="form-group mt-2">
+                            <label for="password">Date of Birth</label>
+                            <input type="date" class="form-control" name="dob">
+                        </div>
+                        <button type="submit" class="btn btn-dark mt-3">Sign Up</button>
                     </form>
     
                 </div>
