added loader on redirecting

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,6 +7,9 @@
         <input type="submit" class="btn btn-lg orange ml" value="Shrink">
     </div>
 </form>
+<div *ngIf="successflag==1" class="mt-2">
+    <h3 class="orangeText">Link Successfully Shrinked</h3>
+</div>
 <div class="card-body p-0 mt-5">
     <div class="table-responsive">
         <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
