--- a/src/app/redirect-page/redirect-page.component.html
+++ b/src/app/redirect-page/redirect-page.component.html
@@ -1,1 +1,5 @@
-<p>redirect-page works!</p>
+<div class="container-fluid">
+    <div class="loader-wrapper">
+        <span class="loader"><span class="loader-inner"></span></span>
+      </div>
+</div>
