--- a/src/app/topnav/topnav.component.css
+++ b/src/app/topnav/topnav.component.css
@@ -33,3 +33,10 @@
     transition: .3s all ease; }
     a, a:hover {
       text-decoration: none !important; }
+
+.black{
+    color:black
+}
+.pointer{
+    cursor: pointer;
+}
