--- a/src/app/topnav/topnav.component.html
+++ b/src/app/topnav/topnav.component.html
@@ -7,6 +7,8 @@
                 <img class="logo" src="./assets/img/logo.png" alt="logo" routerLink="">
             </div>
             <div>
+                    <a class="h5 black text-center pointer" routerLink="/URLShortener">Shrink URL</a>
+                
                 <button class="btn loginbtn m-2" routerLink="/login">Login</button>
                 <button class="btn signupbtn " routerLink="/signup">SignUp</button>
             </div>
