--- a/src/app/stats/stats.component.html
+++ b/src/app/stats/stats.component.html
@@ -47,6 +47,13 @@
             <h6 class="grey">CREATED {{createdAt}}</h6>
             <h3>{{longurl}}</h3>
         </div>
-
+    </div>
+    <div class="row mt-2">
+        <div class="col-lg-4">
+            <div class="d-flex justify-content-between"> 
+                <h5 class="orange mt-2">https://localhost:4200/p/{{shorturl}}</h5>
+                <a class="btn orange-border orange" href={{href}} target="_blank">Redirect</a>
+            </div>
+        </div>
     </div>
 </div>
