--- a/src/app/stats/stats.component.css
+++ b/src/app/stats/stats.component.css
@@ -1,6 +1,16 @@
+.container-fluid{
+    padding:2rem;
+}
 .margin{
-    margin-top: -4rem;
+    margin-top: -7rem;
 }
 .grey{
     color:#9D9D9D;
+}
+.orange{
+    color:#F78812;
+    
+}
+.orange-border{
+    border:2px solid #F78812;
 }
