fixed page not found

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
     </div>
 </form>
 <div *ngIf="successflag==1" class="mt-2">
-    <h3 class="orangeText">URL Successfully Shrinked</h3>
+    <h3 class="orangeText"> Successfully Shrinked</h3>
 </div>
 <div class="card-body p-0 mt-5">
     <div class="table-responsive">
