--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,14 +6,14 @@
         <div class="col-sm-6 w-50">
             <div class="card w-50">
                 <div class="card-body">
-                    <form>
+                    <form [formGroup]="loginForm" (ngSubmit)="submit()">
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input style="font-family:Montserrat" type="email" class="form-control" name="username">
+                            <input style="font-family:Montserrat" type="email" class="form-control" formControlName="username">
                         </div>
                         <div class="form-group mt-2">
                             <label for="password">Password</label>
-                            <input type="password" class="form-control" name="password">
+                            <input type="password" class="form-control" formControlName="password">
                         </div>
                         <button type="submit" class="btn btn-dark mt-3">Login</button>
                     </form>
